--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-    "name": "HENTAI-QUEEN",
+    "name": "ⒸⒽⒶⓉⒽⓊⓇⒶ",
     "version": "0.0.1",
     "description": "Customizable WhatsApp Bot",
     "main": "index.js",
@@ -25,16 +25,16 @@
         "MD",
         "baileys-md"
     ],
-    "homepage": "https://github.com/dinuwah/HENTAI-QUEEN",
+    "homepage": "https://github.com/Chathura369/HENTAI-QUEEN",
     "author": {
-        "name": "Dinuwa Official²⁰²³"
+        "name": "Chathu Official²⁰²³"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/dinuwah/HENTAI-QUEEN.git"
+        "url": "git+https://github.com/Chathura369/HENTAI-QUEEN.git"
     },
     "bugs": {
-        "url": "https://github.com/dinuwah/HENTAI-QUEEN/issues"
+        "url": "https://github.com/Chathura369/HENTAI-QUEEN/issues"
     },
     "license": "GPL-3.0-or-later",
     "dependencies": {
